<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:paddingBottom="@dimen/large_margin">

        <ImageView
            android:id="@+id/product_details_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:paddingTop="@dimen/small_margin"
            android:paddingBottom="50dp"
            app:layout_constraintDimensionRatio="W,2:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="@id/product_details_image"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/product_details_main_info_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/space"
            app:layout_constraintVertical_bias="3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/large_margin">

                <TextView
                    android:id="@+id/product_details_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:includeFontPadding="false"
                    android:textSize="38sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="$ 250" />

                <TextView
                    android:id="@+id/product_details_free_shipping_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:text="@string/catalog_shipping_text"
                    android:textColor="@color/green"
                    app:layout_constraintBottom_toBottomOf="@id/product_details_price"
                    app:layout_constraintStart_toEndOf="@id/product_details_price" />

                <View
                    android:id="@+id/product_details_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_details_free_shipping_text" />

                <TextView
                    android:id="@+id/product_details_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_details_divider"
                    tools:text="Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book." />

                <TextView
                    android:id="@+id/product_details_colour_title"
                    style="@style/Title.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/product_details_colours_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_details_description" />

                <LinearLayout
                    android:id="@+id/product_details_colour_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@id/product_details_colour_title"
                    app:layout_constraintTop_toTopOf="@id/product_details_colour_title" />

                <TextView
                    android:id="@+id/product_details_size_title"
                    style="@style/Title.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/product_details_sizes_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_details_colour_container" />

                <TextView
                    android:id="@+id/product_details_sizes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/product_details_colour_container"
                    app:layout_constraintTop_toTopOf="@id/product_details_size_title"
                    tools:text="23cm" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/product_details_rate_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_main_info_layout">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/Title.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/small_margin"
                    android:text="@string/product_details_rate_title" />

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginTop="@dimen/tiny_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:theme="@style/RatingBar"
                    app:colorControlNormal="@color/yellow" />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/product_details_add_remove_wish_list_button"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/large_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_rate_layout"
            tools:text="Add to wish list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>